# os-lab

./: .clang-format  .clang-tidy  CMakeLists.txt  COPYING  Dockerfile  Makefile  PLAN.md  README.md  STYLE.md  compose.yaml
kernel/: CMakeLists.txt  linker.ld
kernel/include/kernel/: debug_port.hpp  display.hpp  editor_dirty_range.hpp  fixed_queue.hpp  fixed_vector.hpp  font5x7.hpp  framebuffer.hpp  history.hpp  input.hpp  keyboard.hpp  keyboard_decoder.hpp  limine_support.hpp  line_editor.hpp  memory.hpp  memory_map.hpp  mouse_cursor.hpp  mouse_packet_decoder.hpp  panic.hpp  physical_frame_allocator.hpp  placement_new.hpp  pointer_state.hpp  ps2_controller.hpp  runtime.hpp  serial.hpp  shell_command.hpp  string_view.hpp  terminal.hpp  text_console.hpp  timer.hpp
kernel/include/kernel/base/: fixed_queue.hpp  fixed_vector.hpp  placement_new.hpp  span.hpp  string_view.hpp
kernel/include/kernel/boot/: limine_support.hpp
kernel/include/kernel/console/: terminal.hpp
kernel/include/kernel/core/: halt.hpp  panic.hpp
kernel/include/kernel/debug/: display_profile.hpp  heap_smoke.hpp  paging_smoke.hpp  slab_smoke.hpp  terminal_app_smoke.hpp  timer_smoke.hpp
kernel/include/kernel/display/: app_layout.hpp  app_surface.hpp  app_surface_host.hpp  app_window.hpp  backing_surface.hpp  composited_surface.hpp  compositor.hpp  cursor_geometry.hpp  debug_overlay.hpp  debug_overlay_renderer.hpp  desktop_background.hpp  desktop_background_runtime.hpp  desktop_bar.hpp  desktop_shell.hpp  display.hpp  display_frame.hpp  display_palette.hpp  display_profile.hpp  display_runtime.hpp  display_stats.hpp  display_target.hpp  frame_damage.hpp  framebuffer_presenter.hpp  gui_panel.hpp  gui_panel_renderer.hpp  gui_panel_runtime.hpp  gui_surface.hpp  hit_test.hpp  image_view.hpp  mouse_cursor.hpp  pointer_cursor_shape.hpp  present_operation_list.hpp  present_region_list.hpp  scene_buffer.hpp  scroll_mapped_surface.hpp  terminal_render_cache.hpp  terminal_renderer.hpp  terminal_repaint_state.hpp  window_chrome.hpp  window_interaction.hpp  (+5 more)
kernel/include/kernel/drivers/: debug_port.hpp  keyboard.hpp  mouse.hpp  ps2_controller.hpp  serial.hpp
kernel/include/kernel/input/: input.hpp  input_queue.hpp  input_router.hpp  input_stats_tracker.hpp  input_types.hpp  keyboard.hpp  keyboard_decoder.hpp  mouse.hpp  mouse_packet_decoder.hpp  pointer_state.hpp
kernel/include/kernel/memory/: heap.hpp  heap_allocator.hpp  memory.hpp  memory_map.hpp  physical_frame_allocator.hpp  slab.hpp  slab_cache.hpp  slab_registry.hpp  typed_slab_cache.hpp
kernel/include/kernel/runtime/: runtime.hpp
kernel/include/kernel/shell/: shell.hpp  (+2 more)
kernel/src/boot/: CMakeLists.txt  limine_requests.cpp  start.cpp
kernel/src/console/: CMakeLists.txt  terminal.cpp  terminal_app.cpp  terminal_app.hpp  terminal_app_repaint.cpp  terminal_display_runtime.cpp  terminal_display_runtime.hpp
kernel/src/debug/: CMakeLists.txt  display_profile.cpp  heap_smoke.cpp  paging_smoke.cpp  slab_smoke.cpp  timer_smoke.cpp
kernel/src/display/: CMakeLists.txt  app_layout.cpp  app_surface.cpp  app_surface_host.cpp  app_window.cpp  backing_surface.cpp  composited_surface.cpp  compositor.cpp  compositor_runtime.cpp  cursor_geometry.cpp  debug_overlay.cpp  debug_overlay_renderer.cpp  debug_overlay_runtime.cpp  debug_overlay_runtime.hpp  desktop_background.cpp  desktop_background_runtime.cpp  desktop_background_runtime.hpp  desktop_bar.cpp  desktop_bar_runtime.cpp  desktop_bar_runtime.hpp  desktop_shell.cpp  display.cpp  display_frame.cpp  display_profile.cpp  display_runtime.cpp  display_runtime_app.hpp  display_runtime_terminal.hpp  display_stats.cpp  display_target.cpp  frame_damage.cpp  framebuffer_presenter.cpp  gui_panel.cpp  gui_panel_renderer.cpp  gui_panel_runtime.cpp  gui_panel_runtime.hpp  gui_surface.cpp  hit_test.cpp  image_view.cpp  mouse_cursor.cpp  present_operation_list.cpp  (+14 more)
kernel/src/drivers/: CMakeLists.txt  debug_port.cpp  framebuffer.cpp  keyboard.cpp  mouse.cpp  mouse_cursor.cpp  ps2_controller.cpp  serial.cpp  terminal.cpp
kernel/src/input/: CMakeLists.txt  input.cpp  input_router.cpp  keyboard_decoder.cpp  mouse_packet_decoder.cpp  pointer_state.cpp
kernel/src/kernel/: CMakeLists.txt  display.cpp  font5x7.cpp  history.cpp  input.cpp  keyboard_decoder.cpp  line_editor.cpp  main.cpp  memory.cpp  memory_map.cpp  panic.cpp  physical_frame_allocator.cpp  shell.cpp  shell_command.cpp  text_console.cpp  timer_smoke.cpp
kernel/src/memory/: CMakeLists.txt  heap.cpp  heap_allocator.cpp  memory.cpp  memory_map.cpp  physical_frame_allocator.cpp  slab.cpp  slab_cache.cpp  slab_registry.cpp
kernel/src/runtime/: CMakeLists.txt  constructors.cpp  cxx_abi.cpp  memops.cpp  memory.cpp
kernel/src/shell/: CMakeLists.txt  shell.cpp  shell_command.cpp  shell_command_executor.cpp  shell_command_executor.hpp  shell_editor_view.cpp  shell_editor_view.hpp
kernel/src/text/: CMakeLists.txt  editor_dirty_range.cpp  editor_view_layout.cpp  font5x7.cpp  history.cpp  line_editor.cpp  text_buffer.cpp  text_console.cpp
tests/: CMakeLists.txt  unit.cpp
tests/host_logic/: CMakeLists.txt
tests/unit/: CMakeLists.txt  app_layout_test.cpp  app_surface_host_test.cpp  app_surface_test.cpp  app_window_test.cpp  composited_surface_test.cpp  containers_test.cpp  cursor_geometry_test.cpp  debug_overlay_test.cpp  desktop_background_test.cpp  desktop_bar_test.cpp  desktop_shell_test.cpp  display_compositor_test.cpp  display_frame_test.cpp  display_palette_test.cpp  display_profile_test.cpp  display_stats_test.cpp  display_target_test.cpp  display_test.cpp  editor_test.cpp  font5x7_test.cpp  frame_damage_test.cpp  gui_panel_test.cpp  gui_surface_test.cpp  hit_test_test.cpp  image_view_test.cpp  input_queue_test.cpp  input_router_test.cpp  keyboard_decoder_test.cpp  memory_test.cpp  mouse_packet_decoder_test.cpp  paging_test.cpp  pointer_state_test.cpp  present_operation_list_test.cpp  present_region_list_test.cpp  scroll_mapped_surface_test.cpp  shell_command_test.cpp  string_view_test.cpp  terminal_render_cache_test.cpp  terminal_renderer_test.cpp  (+11 more)
(+56 files in other folders)
