add_executable(os_lab_unit_tests
    app_surface_test.cpp
    composited_surface_test.cpp
    containers_test.cpp
    cursor_geometry_test.cpp
    desktop_background_test.cpp
    debug_overlay_test.cpp
    display_compositor_test.cpp
    display_palette_test.cpp
    display_test.cpp
    display_target_test.cpp
    editor_test.cpp
    font5x7_test.cpp
    frame_damage_test.cpp
    gui_panel_test.cpp
    gui_surface_test.cpp
    hit_test_test.cpp
    image_view_test.cpp
    input_queue_test.cpp
    input_router_test.cpp
    keyboard_decoder_test.cpp
    memory_test.cpp
    mouse_packet_decoder_test.cpp
    paging_test.cpp
    pointer_state_test.cpp
    shell_command_test.cpp
    string_view_test.cpp
    terminal_render_cache_test.cpp
    terminal_renderer_test.cpp
    terminal_repaint_state_test.cpp
    text_buffer_test.cpp
    text_console_test.cpp
)
target_link_libraries(os_lab_unit_tests PRIVATE
    os_lab_host_logic
    os_lab_host_compile_settings
    GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(os_lab_unit_tests)
