add_library(os_lab_kernel_display OBJECT
    app_layout.cpp
    app_surface.cpp
    app_surface_host.cpp
    backing_surface.cpp
    composited_surface.cpp
    compositor.cpp
    compositor_runtime.cpp
    cursor_geometry.cpp
    desktop_background.cpp
    desktop_background_runtime.cpp
    debug_overlay.cpp
    debug_overlay_renderer.cpp
    debug_overlay_runtime.cpp
    display.cpp
    display_frame.cpp
    display_profile.cpp
    display_runtime.cpp
    display_stats.cpp
    display_target.cpp
    framebuffer_presenter.cpp
    frame_damage.cpp
    gui_panel.cpp
    gui_panel_renderer.cpp
    gui_panel_runtime.cpp
    gui_surface.cpp
    hit_test.cpp
    image_view.cpp
    mouse_cursor.cpp
    present_operation_list.cpp
    scene_buffer.cpp
    scroll_mapped_surface.cpp
    terminal_render_cache.cpp
    terminal_repaint_state.cpp
    terminal_renderer.cpp
)
os_lab_configure_kernel_object(os_lab_kernel_display)
